argocd-ingress/tools/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
    host: trg.argocd.demo
  tls:
  - hosts:
    - trg.argocd.demo
    secretName: trg-argocd-demo
---
apiVersion: v1
kind: Secret
metadata:
  creationTimestamp: "2023-11-14T10:53:24Z"
  name: trg-argocd-demo
  namespace: argocd
  resourceVersion: "153716"
  uid: bdd9bb34-033f-45c3-950b-4d49ca2b1fe1
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVIakNDQW9hZ0F3SUJBZ0lRWThQSloxdXUxb3JOSUxzYkVsT1BxVEFOQmdrcWhraUc5dzBCQVFzRkFEQmoKTVI0d0hBWURWUVFLRXhWdGEyTmxjblFnWkdWMlpXeHZjRzFsYm5RZ1EwRXhIREFhQmdOVkJBc01FM1J5WlhabgpZV3hzUUhWaWRXNTBaek0xTVRBeEl6QWhCZ05WQkFNTUdtMXJZMlZ5ZENCMGNtVjJaMkZzYkVCMVluVnVkR2N6Ck5URXdNQjRYRFRJek1URXhOREV3TXpNMU5Gb1hEVEkyTURJeE5ERXdNek0xTkZvd1J6RW5NQ1VHQTFVRUNoTWUKYld0alpYSjBJR1JsZG1Wc2IzQnRaVzUwSUdObGNuUnBabWxqWVhSbE1Sd3dHZ1lEVlFRTERCTjBjbVYyWjJGcwpiRUIxWW5WdWRHY3pOV [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQzMrRHFvTWRDc1VMVEwKTWhNTWpKeWxqTjNvUmhtaVplVUFmTUZ6N2luaGphcXEvVlNzQnJSYVNmYytSTnBNaVN3dGRaVjZPT3V4Y3pPdwpUWUM0bDROaGpud0lEbUhhVE5NSVU5T0IvLzdtQk9DUVYzWnFPSzJURjEwWFl6cE5UL044K2I1L0laVWp3QmJoCm41RUg3RytjcUFoNTY2MllzY09BL2tEekZSUHdPOE5SNDhySkRGL3ZTV1VzdFRmU291OXdpdkY5TU9XZ1ZwQ3IKbG83YXNXM04wcEtPTW1RT3RuRUh5VTNpNFl0aUQxN2R6bXR0ckc4bEJPWmJTRmVyb2tSL2s2MW1Hc0FqaFhwbQpsNHFQaktLVlNONldyZ [...]
---
